new tokenizer api, move namespace, & template updates